<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zebenzi</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>
    <string name="login">Sign in</string>
    <string name="register">Register</string>
    <string name="empty_search_string">Please enter search text</string>
    <string name="hire_me">Hire Me</string>
    <string name="search_title">I\&apos;m looking for</string>
    <string name="api_json_field_service_id">serviceId</string>
    <string name="api_json_field_service_default_id">serviceDeafaultId</string>
    <string name="api_json_field_user_id">userId</string>
    <string name="api_json_field_quote_id">quoteId</string>
    <string name="api_json_field_work_start_date">workStartDate</string>
    <string name="api_json_field_job_id">JobId</string>
    <string name="api_json_field_job_comment">Comment</string>
    <string name="api_json_field_job_rating">Rating</string>
    <string name="api_json_field_device_type">deviceType</string>
    <string name="api_json_field_device_key">deviceKey</string>

    <string name="api_json_field_supplier_id">supplierId</string>
    <string name="history">My Jobs</string>
    <string name="supplier_jobs">Supplier Jobs</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="proxy">-http-proxy http://vaugan.nayagar:BLAckp00l28@10.100.9.115:8080</string>
    <string name="implementation_coming_soon">Implementation Coming Soon</string>
    <string name="logout">Sign out</string>
    <string name="check_your_network_connection">Check your network connection</string>
    <string name="no_history_found">Could not find job history</string>
    <string name="no_connection">No connection</string>
    <string name="no_response_from_server">No response from server. Please try again later.</string>


    //fragment tags
    <string name="fragment_account">"Account"</string>
    <string name="fragment_history">"History"</string>
    <string name="fragment_login">"Login"</string>
    <string name="fragment_job">"Job"</string>
    <string name="fragment_register">"Register"</string>
    <string name="fragment_search">"Search"</string>

    //nav drawer entries
    <string name="nav_drawer_item_new_job">New Job</string>
    <string name="nav_drawer_item_account">My Account</string>
    <string name="nav_drawer_item_history">My History</string>
    <string name="nav_drawer_item_supplier_history">Supplier History</string>
    <string name="nav_drawer_item_supplier_home">Supplier Home</string>
    <string name="notify1">Notify 1</string>
    <string name="notify2">Notify 2</string>
    <string name="notify3">Notify 3</string>
    <string name="notify4">Notify 4</string>
    <string name="notify5">Notify 5</string>

    //gcm strings
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    //Card layout buttons
    <string name="button_card_quote_customer">"Quote Customer"</string>
    <string name="button_card_accept_quote">"Accept Quote"</string>
    <string name="button_card_decline_req">"Decline Request"</string>
    <string name="button_card_start_job">"Start Job"</string>
    <string name="button_card_cancel_req">"Cancel"</string>
</resources>
